--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@angular/platform-browser-dynamic": "5.0.3",
     "@ionic-native/core": "4.4.0",
     "@ionic-native/geolocation": "^4.5.3",
+    "@ionic-native/social-sharing": "^4.5.3",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "2.1.3",
     "cordova-plugin-geolocation": "^4.0.1",
+    "cordova-plugin-x-socialsharing": "^5.2.1",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "moment": "^2.20.1",
@@ -42,7 +44,8 @@
     "plugins": {
       "cordova-plugin-geolocation": {
         "GEOLOCATION_USAGE_DESCRIPTION": "To locate you"
-      }
+      },
+      "cordova-plugin-x-socialsharing": {}
     }
   }
 }
