--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
+    "@angular/animations": "^5.2.6",
     "@angular/common": "5.0.3",
     "@angular/compiler": "5.0.3",
     "@angular/compiler-cli": "5.0.3",
@@ -36,6 +37,7 @@
     "cordova-plugin-x-socialsharing": "^5.2.1",
     "es6-promise-plugin": "^4.1.0",
     "ionic-angular": "3.9.2",
+    "ionic-stepper": "^1.1.0",
     "ionicons": "3.0.0",
     "moment": "^2.20.1",
     "rxjs": "5.5.2",
